--- a/plugins/gatsby-source-twitter/package.json
+++ b/plugins/gatsby-source-twitter/package.json
@@ -3,7 +3,9 @@
   "name": "gatsby-source-twitter",
   "version": "0.0.1",
   "dependencies": {
-    "graphql": "^0.10.3",
     "twitter": "^1.7.1"
+  },
+  "peerDependencies": {
+    "graphql": "^0.10.3"
   }
 }
