--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-styled-components": "^1.5.1",
     "dotenv": "^6.0.0",
     "gatsby": "^1.9.277",
+    "gatsby-plugin-canonical-urls": "^1.0.18",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-styled-components": "^2.0.11",
