--- a/package.json
+++ b/package.json
@@ -1,34 +1,28 @@
 {
   "private": true,
-  "name": "cadejs.com",
-  "workspaces": [
-    "plugins/*"
-  ],
   "dependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
-    "dotenv": "^6.1.0",
-    "gatsby": "^2.0.31",
-    "gatsby-plugin-canonical-urls": "^2.0.6",
-    "gatsby-plugin-google-fonts": "^0.0.4",
+    "emotion": "^9.2.12",
+    "emotion-server": "^9.2.12",
+    "emotion-theming": "^9.2.9",
+    "gatsby": "^2.0.19",
+    "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-styled-components": "^3.0.0",
-    "gatsby-source-github": "^0.0.2",
-    "gatsby-source-unsplash": "^1.1.0",
+    "gatsby-plugin-typography": "^2.2.1",
+    "polished": "^2.3.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
-    "react-html-parser": "^2.0.2",
-    "react-medium-image-zoom": "^3.0.15",
-    "styled-components": "^4.0.2",
-    "twitter-text": "^3.0.0"
-  },
-  "devDependencies": {
-    "prettier": "^1.14.3"
+    "react-typography": "^0.16.13",
+    "typography": "^0.16.17"
   },
   "scripts": {
     "build": "gatsby build",
-    "format": "prettier --write 'src/**/*.js'",
-    "start": "gatsby develop"
+    "start": "gatsby develop",
+    "format": "prettier --write 'src/**/*.js'"
+  },
+  "devDependencies": {
+    "prettier": "^1.15.2"
   }
 }
