--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "emotion-server": "^9.2.12",
     "emotion-theming": "^9.2.9",
     "gatsby": "^2.0.19",
+    "gatsby-image": "^2.0.20",
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-typography": "^2.2.1",
+    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-sharp": "^2.1.8",
     "polished": "^2.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
