--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'"
+    "format": "prettier --write 'src/**/*.js'",
+    "serve": "gatsby serve",
+    "start": "gatsby develop"
   },
   "devDependencies": {
     "prettier": "^1.15.2"
