--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
   "private": true,
-  "dependencies": {
-    "emotion": "^9.2.12",
-    "emotion-server": "^9.2.12",
-    "emotion-theming": "^9.2.9",
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-emotion": "^2.0.6",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.12",
-    "gatsby-plugin-typography": "^2.2.1",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "polished": "^2.3.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-emotion": "^9.2.12",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
-    "typography": "^0.16.17"
-  },
   "scripts": {
     "build": "gatsby build",
-    "format": "prettier --write 'src/**/*.js'",
+    "clean": "rm -rf .cache node_modules public",
+    "format": "prettier --write --ignore-path .gitignore \"**/*.{js,jsx,json,css,scss,md,yml}\"",
     "serve": "gatsby serve",
     "start": "gatsby develop"
   },
+  "dependencies": {
+    "emotion": "^10.0.5",
+    "emotion-theming": "^10.0.5",
+    "gatsby": "^2.0.67",
+    "gatsby-image": "^2.0.25",
+    "polished": "^2.3.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-emotion": "^10.0.0",
+    "react-helmet": "^5.2.0",
+    "react-typography": "^0.16.18",
+    "typography": "^0.16.18"
+  },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "emotion-server": "^10.0.5",
+    "gatsby-plugin-emotion": "^3.0.1",
+    "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-typography": "^2.2.2",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-sharp": "^2.1.9",
+    "prettier": "^1.15.3"
   }
 }
