--- a/package.json
+++ b/package.json
@@ -3,32 +3,36 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "rm -rf .cache node_modules public",
-    "format": "prettier --write --ignore-path .gitignore \"**/*.{js,jsx,json,css,scss,md,yml}\"",
+    "format": "prettier --write --ignore-path .gitignore \"**/*.{js,json,css,scss,md,yml}\"",
+    "lint": "eslint --ignore-path .gitignore \"src/**/*.js\"",
     "serve": "gatsby serve",
     "start": "gatsby develop"
   },
   "dependencies": {
-    "emotion": "^10.0.5",
-    "emotion-theming": "^10.0.5",
-    "gatsby": "^2.0.67",
+    "gatsby": "^2.0.85",
     "gatsby-image": "^2.0.25",
+    "js-cookie": "^2.2.0",
     "polished": "^2.3.1",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-emotion": "^10.0.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-feather": "^1.1.5",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
+    "styled-components": "^4.1.3",
     "typography": "^0.16.18"
   },
   "devDependencies": {
-    "emotion-server": "^10.0.5",
-    "gatsby-plugin-emotion": "^3.0.1",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sharp": "^2.0.15",
-    "gatsby-plugin-typography": "^2.2.2",
+    "@spraoi/eslint-config": "^0.17.13",
+    "@spraoi/prettier-config": "^0.17.0",
+    "eslint": "^5.12.0",
+    "gatsby-plugin-manifest": "^2.0.13",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-typography": "^2.2.4",
     "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-sharp": "^2.1.9",
+    "gatsby-transformer-sharp": "^2.1.10",
     "prettier": "^1.15.3"
   }
 }
