--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "start": "gatsby develop"
   },
   "dependencies": {
+    "@svgr/webpack": "^4.1.0",
     "gatsby": "^2.0.85",
     "gatsby-image": "^2.0.25",
+    "gatsby-plugin-manifest": "^2.0.13",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-svgr": "^2.0.1",
+    "gatsby-plugin-typography": "^2.2.4",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-sharp": "^2.1.10",
     "js-cookie": "^2.2.0",
     "polished": "^2.3.1",
     "prop-types": "^15.6.2",
@@ -26,13 +35,6 @@
     "@spraoi/eslint-config": "^0.17.13",
     "@spraoi/prettier-config": "^0.17.0",
     "eslint": "^5.12.0",
-    "gatsby-plugin-manifest": "^2.0.13",
-    "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-plugin-typography": "^2.2.4",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-sharp": "^2.1.10",
     "prettier": "^1.15.3"
   }
 }
