--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^4.1.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.26",
     "gatsby-plugin-manifest": "^2.0.13",
