--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "gatsby develop"
   },
   "dependencies": {
-    "@svgr/webpack": "^4.1.0",
+    "@svgr/webpack": "^2.4.1",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.18",
     "gatsby-image": "^2.0.30",
@@ -22,6 +22,7 @@
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-sharp": "^2.1.14",
+    "graphql": "^14.1.1",
     "js-cookie": "^2.2.0",
     "polished": "^3.0.0",
     "prop-types": "^15.7.2",
@@ -38,5 +39,8 @@
     "@spraoi/prettier-config": "^0.19.0",
     "eslint": "^5.14.1",
     "prettier": "^1.16.4"
+  },
+  "resolutions": {
+    "gatsby/**/graphql": "^0.13.2"
   }
 }
