--- a/package.json
+++ b/package.json
@@ -9,35 +9,35 @@
     "start": "gatsby develop"
   },
   "dependencies": {
-    "@svgr/webpack": "^2.4.1",
+    "@svgr/webpack": "^4.1.0",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.1.18",
-    "gatsby-image": "^2.0.30",
-    "gatsby-plugin-manifest": "^2.0.19",
-    "gatsby-plugin-react-helmet": "^3.0.7",
-    "gatsby-plugin-sharp": "^2.0.22",
+    "gatsby": "^2.1.24",
+    "gatsby-image": "^2.0.31",
+    "gatsby-plugin-manifest": "^2.0.22",
+    "gatsby-plugin-react-helmet": "^3.0.8",
+    "gatsby-plugin-react-svg": "^2.1.0",
+    "gatsby-plugin-sharp": "^2.0.25",
     "gatsby-plugin-sitemap": "^2.0.6",
     "gatsby-plugin-styled-components": "^3.0.6",
-    "gatsby-plugin-svgr": "^2.0.1",
-    "gatsby-plugin-typography": "^2.2.7",
+    "gatsby-plugin-typography": "^2.2.8",
     "gatsby-source-filesystem": "^2.0.23",
-    "gatsby-transformer-sharp": "^2.1.14",
+    "gatsby-transformer-sharp": "^2.1.15",
     "graphql": "^14.1.1",
     "js-cookie": "^2.2.0",
-    "polished": "^3.0.0",
+    "polished": "^3.0.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-feather": "^1.1.6",
     "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.18",
+    "react-typography": "^0.16.19",
     "styled-components": "^4.1.3",
-    "typography": "^0.16.18"
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@spraoi/eslint-config": "^0.19.0",
     "@spraoi/prettier-config": "^0.19.0",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.1",
     "prettier": "^1.16.4"
   },
   "resolutions": {
