--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.13.51",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-manifest": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-react-svg": "^2.1.1",
-    "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-sitemap": "^2.2.5",
-    "gatsby-plugin-styled-components": "^3.1.2",
-    "gatsby-plugin-typography": "^2.3.2",
-    "gatsby-source-filesystem": "^2.1.8",
-    "gatsby-transformer-sharp": "^2.2.5",
-    "graphql": "^14.4.2",
-    "js-cookie": "^2.2.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "gatsby": "^2.15.1",
+    "gatsby-image": "^2.2.15",
+    "gatsby-plugin-manifest": "^2.2.12",
+    "gatsby-plugin-react-helmet": "^3.1.5",
+    "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-plugin-sharp": "^2.2.18",
+    "gatsby-plugin-sitemap": "^2.2.9",
+    "gatsby-plugin-styled-components": "^3.1.3",
+    "gatsby-plugin-typography": "^2.3.5",
+    "gatsby-source-filesystem": "^2.1.18",
+    "gatsby-transformer-sharp": "^2.2.12",
+    "graphql": "^14.5.4",
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.3.2",
+    "typescript": "^3.6.2",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@spraoi/eslint-config": "^0.20.35",
-    "@spraoi/prettier-config": "^0.20.18",
-    "eslint": "^6.1.0",
+    "@spraoi/eslint-config": "^0.21.16",
+    "@spraoi/prettier-config": "^0.21.16",
+    "eslint": "^5.16.0",
     "prettier": "^1.18.2"
   }
 }
