--- a/package.json
+++ b/package.json
@@ -9,35 +9,37 @@
     "start": "gatsby develop"
   },
   "dependencies": {
+    "@types/react": "^16.9.17",
     "babel-plugin-styled-components": "^1.10.6",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "gatsby": "^2.15.1",
-    "gatsby-image": "^2.2.15",
-    "gatsby-plugin-manifest": "^2.2.12",
-    "gatsby-plugin-react-helmet": "^3.1.5",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "gatsby": "^2.18.17",
+    "gatsby-image": "^2.2.37",
+    "gatsby-plugin-manifest": "^2.2.34",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-react-svg": "^2.1.2",
-    "gatsby-plugin-sharp": "^2.2.18",
-    "gatsby-plugin-sitemap": "^2.2.9",
-    "gatsby-plugin-styled-components": "^3.1.3",
-    "gatsby-plugin-typography": "^2.3.5",
-    "gatsby-source-filesystem": "^2.1.18",
-    "gatsby-transformer-sharp": "^2.2.12",
-    "graphql": "^14.5.4",
-    "polished": "^3.4.1",
+    "gatsby-plugin-sharp": "^2.3.10",
+    "gatsby-plugin-sitemap": "^2.2.24",
+    "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-typography": "^2.3.20",
+    "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-styled-components-dark-mode": "^1.0.9",
+    "gatsby-transformer-sharp": "^2.3.9",
+    "graphql": "^14.5.8",
+    "polished": "^3.4.2",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
-    "styled-components": "^4.3.2",
-    "typescript": "^3.6.2",
+    "styled-components": "^4.4.1",
+    "typescript": "^3.7.4",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@spraoi/eslint-config": "^0.21.16",
-    "@spraoi/prettier-config": "^0.21.16",
-    "eslint": "^5.16.0",
-    "prettier": "^1.18.2"
+    "@spraoi/eslint-config": "^0.23.49",
+    "@spraoi/prettier-config": "^0.23.43",
+    "eslint": "^6.8.0",
+    "prettier": "^1.19.1"
   }
 }
