--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
+    "terser": "^4.4.3",
     "typescript": "^3.7.4",
     "typography": "^0.16.19"
   },
