--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
     "start": "gatsby develop"
   },
   "dependencies": {
-    "@types/react": "^16.9.17",
-    "babel-plugin-styled-components": "^1.10.6",
-    "eslint-plugin-flowtype": "^4.5.2",
-    "gatsby": "^2.18.17",
-    "gatsby-image": "^2.2.37",
-    "gatsby-plugin-manifest": "^2.2.34",
+    "@types/react": "^16.9.27",
+    "babel-plugin-styled-components": "^1.10.7",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "gatsby": "^2.20.9",
+    "gatsby-image": "^2.3.1",
+    "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-react-svg": "^2.1.2",
-    "gatsby-plugin-sharp": "^2.3.10",
-    "gatsby-plugin-sitemap": "^2.2.24",
-    "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-plugin-typography": "^2.3.20",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-transformer-sharp": "^2.3.9",
-    "graphql": "^14.5.8",
-    "polished": "^3.4.2",
+    "gatsby-plugin-react-helmet": "^3.2.1",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-plugin-sitemap": "^2.3.1",
+    "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-plugin-typography": "^2.4.1",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.4.3",
+    "graphql": "^14.6.0",
+    "polished": "^3.5.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
+    "react-is": "^16.13.1",
     "react-typography": "^0.16.19",
-    "styled-components": "^4.4.1",
-    "terser": "^4.4.3",
-    "typescript": "^3.7.4",
+    "styled-components": "^5.0.1",
+    "terser": "^4.6.8",
+    "typescript": "^3.8.3",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@spraoi/eslint-config": "^0.23.49",
-    "@spraoi/prettier-config": "^0.23.43",
+    "@spraoi/eslint-config": "^0.26.0",
+    "@spraoi/prettier-config": "^0.26.0",
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.2"
   }
 }
