--- a/package.json
+++ b/package.json
@@ -3,45 +3,33 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "rm -rf .cache node_modules public",
-    "format": "prettier --write --ignore-path .gitignore \"**/*.{js,json,css,scss,md,yml}\"",
-    "lint": "eslint --ignore-path .gitignore \"src/**/*.js\"",
+    "format": "prettier --write --ignore-path .gitignore .",
     "serve": "gatsby serve",
     "start": "gatsby develop"
   },
   "dependencies": {
-    "@types/react": "^16.9.38",
-    "babel-plugin-styled-components": "^1.10.7",
-    "eslint-plugin-flowtype": "^5.1.3",
-    "gatsby": "^2.23.7",
-    "gatsby-image": "^2.4.7",
-    "gatsby-plugin-manifest": "^2.4.12",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.3.4",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.12",
-    "gatsby-plugin-sitemap": "^2.4.5",
-    "gatsby-plugin-styled-components": "^3.3.4",
-    "gatsby-plugin-typography": "^2.5.4",
-    "gatsby-source-filesystem": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.5.5",
-    "graphql": "^15.1.0",
-    "polished": "^3.6.5",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-feather": "^2.0.8",
-    "react-helmet": "^6.1.0",
-    "react-is": "^16.13.1",
-    "react-typography": "^0.16.19",
-    "styled-components": "^5.1.1",
-    "terser": "^4.8.0",
-    "typescript": "^3.9.5",
-    "typography": "^0.16.19"
-  },
-  "devDependencies": {
-    "@spraoi/eslint-config": "^0.29.0",
+    "@babel/core": "^7.15.0",
     "@spraoi/prettier-config": "^0.29.0",
-    "eslint": "^7.2.0",
-    "prettier": "^2.0.5"
+    "babel-plugin-styled-components": "^1.13.2",
+    "gatsby": "^3.12.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^1.12.0",
+    "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-plugin-sitemap": "^4.8.0",
+    "gatsby-plugin-styled-components": "^4.12.0",
+    "gatsby-plugin-typography": "^3.12.0",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-sharp": "^3.12.0",
+    "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-is": "^17.0.2",
+    "react-typography": "^0.16.20",
+    "styled-components": "^5.3.1",
+    "typography": "^0.16.21"
   }
 }
