--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
+  "name": "cade.me",
   "private": true,
   "scripts": {
-    "build": "gatsby build",
-    "clean": "rm -rf .cache node_modules public",
-    "format": "prettier --write --ignore-path .gitignore .",
-    "serve": "gatsby serve",
-    "start": "gatsby develop"
+    "build": "next build",
+    "format": "prettier --ignore-path .gitignore --write .",
+    "lint": "next lint",
+    "serve": "next start",
+    "start": "next dev"
   },
   "dependencies": {
-    "@babel/core": "^7.15.0",
-    "@spraoi/prettier-config": "^0.29.0",
-    "babel-plugin-styled-components": "^1.13.2",
-    "gatsby": "^3.12.1",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^1.12.0",
-    "gatsby-plugin-manifest": "^3.12.0",
-    "gatsby-plugin-react-helmet": "^4.12.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.12.0",
-    "gatsby-plugin-sitemap": "^4.8.0",
-    "gatsby-plugin-styled-components": "^4.12.0",
-    "gatsby-plugin-typography": "^3.12.0",
-    "gatsby-source-filesystem": "^3.12.0",
-    "gatsby-transformer-sharp": "^3.12.0",
-    "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-is": "^17.0.2",
-    "react-typography": "^0.16.20",
-    "styled-components": "^5.3.1",
-    "typography": "^0.16.21"
+    "@babel/core": "^7.17.9",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11",
+    "@fontsource/inter": "^4.5.7",
+    "@types/node": "^17.0.23",
+    "@types/react": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "focus-visible": "^5.2.0",
+    "framer-motion": "^6.2.9",
+    "next": "^12.1.4",
+    "next-seo": "^5.4.0",
+    "prettier": "^2.6.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "typescript": "^4.6.3"
   }
 }
