--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cade.me",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "next build && next export",
     "format": "prettier --ignore-path .gitignore --write .",
     "lint": "next lint",
     "serve": "next start",
@@ -14,20 +14,20 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11",
     "@fontsource/inter": "^4.5.7",
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
+    "@types/node": "^17.0.29",
+    "@types/react": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^6.2.9",
-    "next": "^12.1.4",
+    "framer-motion": "^6.3.2",
+    "next": "^12.1.5",
     "next-seo": "^5.4.0",
     "prettier": "^2.6.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "typescript": "^4.6.3"
   }
 }
